# rule

./: .dockerignore  .env  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_README.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  LLM_AUTOMATION_README.md  README.md  SECURITY.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirement.txt  requirements.txt  tailwind.config.js  test_api.py  test_llm_automation.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATES/: bug-report.md  documentation.md  feature-request.md
.github/workflows/: ci.yml  link-check-config.json
Frontend/: README.md  package-lock.json  package.json
Frontend/src/components/: OutputViewer.tsx  UploadCard.tsx
Frontend/src/pages/: LandingPage.tsx
backend/: Backend_Readme.md  Dockerfile.backend  ENHANCED_BACKEND_API.md  QUICK_REFERENCE.md  README.md  llm_config.json  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: README.md  main.py
backend/configs/: llm_config.json
backend/modules/analytics/: __init__.py  api.py  engine.py  models.py
backend/modules/llm/: base_provider.py  llm_automation.py  provider_router.py  response_validator.py  test_validation.py  utils.py  validation_models.py
backend/pipelines/: analyze_resume.py
configs/: llm_config.json  llm_config_example.json
frontend/: Dockerfile.frontend  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/lib/: api.ts
outputs/: 7b837d02-d0a3-4622-bf7d-688e79ec956e.json  Adithya_V_Resume.json  Aparna_J_Resume.json  David_Eliot_Resume.json  Dharshan_Kumar_J_Resume.json  First_Last_Resume.json  JENNIFER_MELON_Resume.json  John_Varun_Resume.json  RICHARD_SANCHEZ_Resume.json  Ronnie_A_Jeffrey_Resume.json  cffb3700-f2fd-4c6b-97f2-e17a3c5cc6b6.json
scripts/: extract_text.py  llm-prompt.py  llm_prompt.py  ocr_only_extract.py
scripts/api/: main.py
scripts/pipelines/: analyze_resume.py
src/: App.tsx  main.tsx
src/components/: CodeBlock.tsx  Navbar.tsx  Section.tsx  Sidebar.tsx
(+26 files in other folders)
